added toggle, code cleanup

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 
 <body class="scaled">
-
   <div class="aligner">
     <div class="aligner-item">
-      <div id="scaledtext" class="clock"></div>
+      <div id="clock" class="scaledtext"></div>
     </div>
   </div>
 </body>
